# group05

./: .gitignore  README copy.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
cosmos/: decode.py  encode.py
notebooks/: 00_check_data.ipynb  00_torch_xformers_check.ipynb  01_revontuli.ipynb
pilot-exp/: README.md  download_movi.py  eval_pixel_dynamics.py  eval_slot_dynamics_pixels.py  extract_movi.py  make_slot_data_pixels.py  train_dynamics_pixels_v2.py  train_slot_dynamics_pixels.py  train_slot_pixels.py  visualize.py
pilot-exp/results_pixel_prediction/: explain.txt
pilot-exp/results_slot_prediction/: explain.txt
src/: dataset.py
