[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "piq>=0.8.0",
    "seaborn>=0.13.2",
    "wandb>=0.23.1",
    "xformers==0.0.33",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
xformers = [
    { index = "xformers-cu128"}
]

[[tool.uv.index]]
name = "xformers-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true